--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: monospace;
+  background-color: lightblue;
+  color: green;
+}
+
 .ball {
   width: 60px;
   height: 60px;
@@ -7,7 +16,36 @@
   margin: 5px;
 }
 
+#wrapper-balls {
+
+}
+
 .section {
-  margin-top: 200px;
   text-align: center;
+  margin-top: 8rem;
+  font-size: 25px;
+}
+
+#wrapper-rbg {
+  margin-top: 50px;
+}
+
+#wrapper-balls {
+  margin-top: 50px;
+}
+
+#wrapper-btns {
+  margin-top: 70px;
+}
+
+button {
+  margin-bottom: 50px;
+  width: 400px;
+  height: 40px;
+  border: none;
+  background: none;
+  font-size: 20px;
+  background-color: green;
+  border-radius: 10px;
+  color: white;
 }
